build/log/idf_py_stdout_output_8036
[1/9] Building C object esp-idf/utils/CMakeFiles/__idf_utils.dir/utils.c.obj
FAILED: esp-idf/utils/CMakeFiles/__idf_utils.dir/utils.c.obj 
/home/luisma/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.3-dev-892-g692c1fcc52\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/luisma/Escritorio/SBC/weather-compass/build/config -I/home/luisma/Escritorio/SBC/weather-compass/components/utils -I/home/luisma/esp/esp-idf/components/newlib/platform_include -I/home/luisma/esp/esp-idf/components/freertos/config/include -I/home/luisma/esp/esp-idf/components/freertos/config/include/freertos -I/home/luisma/esp/esp-idf/components/freertos/config/xtensa/include -I/home/luisma/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/luisma/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/luisma/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/luisma/esp/esp-idf/components/freertos/esp_additions/include -I/home/luisma/esp/esp-idf/components/esp_hw_support/include -I/home/luisma/esp/esp-idf/components/esp_hw_support/include/soc -I/home/luisma/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/luisma/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/luisma/esp/esp-idf/components/heap/include -I/home/luisma/esp/esp-idf/components/log/include -I/home/luisma/esp/esp-idf/components/soc/include -I/home/luisma/esp/esp-idf/components/soc/esp32 -I/home/luisma/esp/esp-idf/components/soc/esp32/include -I/home/luisma/esp/esp-idf/components/hal/platform_port/include -I/home/luisma/esp/esp-idf/components/hal/esp32/include -I/home/luisma/esp/esp-idf/components/hal/include -I/home/luisma/esp/esp-idf/components/esp_rom/include -I/home/luisma/esp/esp-idf/components/esp_rom/include/esp32 -I/home/luisma/esp/esp-idf/components/esp_rom/esp32 -I/home/luisma/esp/esp-idf/components/esp_common/include -I/home/luisma/esp/esp-idf/components/esp_system/include -I/home/luisma/esp/esp-idf/components/esp_system/port/soc -I/home/luisma/esp/esp-idf/components/esp_system/port/include/private -I/home/luisma/esp/esp-idf/components/xtensa/esp32/include -I/home/luisma/esp/esp-idf/components/xtensa/include -I/home/luisma/esp/esp-idf/components/xtensa/deprecated_include -I/home/luisma/esp/esp-idf/components/lwip/include -I/home/luisma/esp/esp-idf/components/lwip/include/apps -I/home/luisma/esp/esp-idf/components/lwip/include/apps/sntp -I/home/luisma/esp/esp-idf/components/lwip/lwip/src/include -I/home/luisma/esp/esp-idf/components/lwip/port/include -I/home/luisma/esp/esp-idf/components/lwip/port/freertos/include -I/home/luisma/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/luisma/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/luisma/esp/esp-idf/components/lwip/port/esp32xx/include/sys -mlongcalls -Wno-frame-address  -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/luisma/Escritorio/SBC/weather-compass=. -fmacro-prefix-map=/home/luisma/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/utils/CMakeFiles/__idf_utils.dir/utils.c.obj -MF esp-idf/utils/CMakeFiles/__idf_utils.dir/utils.c.obj.d -o esp-idf/utils/CMakeFiles/__idf_utils.dir/utils.c.obj -c /home/luisma/Escritorio/SBC/weather-compass/components/utils/utils.c
/home/luisma/Escritorio/SBC/weather-compass/components/utils/utils.c: In function 'mv_to_celsius':
/home/luisma/Escritorio/SBC/weather-compass/components/utils/utils.c:5:33: error: expected ';' before '}' token
    5 |     return (float) ((mv-500)/10)
      |                                 ^
      |                                 ;
    6 | }
      | ~                                
[2/9] Performing build step for 'bootloader'
[1/1] cd /home/luisma/Escritorio/SBC/weather-compass/build/bootloader/esp-idf/esptool_py && /home/luisma/.espressif/python_env/idf5.3_py3.10_env/bin/python /home/luisma/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/luisma/Escritorio/SBC/weather-compass/build/bootloader/bootloader.bin
Bootloader binary size 0x6850 bytes. 0x7b0 bytes (7%) free.
ninja: build stopped: subcommand failed.
